@@ -1,3 +1,10 @@
+2001-07-05  OKUJI Yoshinori  <okuji@gnu.org>
+
+	* stage2/boot.c (load_initrd) [!NO_DECOMPRESSION]: Set
+	NO_DECOMPRESSION to one before opening INITRD, so that GRUB
+	doesn't decompress an initrd automatically. Reported by
+	Thierry Laronde.
+	
 2001-07-04  OKUJI Yoshinori  <okuji@gnu.org>
 
 	* config.guess: Updated from automake-1.4h.
